--- a/03_grid_introduccion/index.html
+++ b/03_grid_introduccion/index.html
@@ -21,36 +21,28 @@
     <h1>Introducción al sistema de rejilla</h1>
 
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-2 col-md-4 col-lg-3 columna">1 de 4</div>
-        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-3 columna">2 de 4</div>
-        <div class="col-xs-12 col-sm-2 col-md-5 col-lg-3 columna">3 de 4</div>
-        <div class="col-xs-12 col-sm-4 col-md-1 col-lg-3 columna">4 de 4</div>
-      </div>
-      <div class="row">
-        <div class="col-xs-2 col-lg-6 columna">1 de 2</div>
-        <div class="col-xs-5 columna">1 de 5</div>
-        <div class="col-xs-5 columna">1 de 5</div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 col-xs-push-6 columna">1 de 1</div>
-        <div class="col-xs-1 col-xs-push-6 columna">1 de 1</div>
-        <div class="col-xs-1 col-xs-push-6 columna">1 de 1</div>
-        <div class="col-xs-1 col-xs-push-6 columna">1 de 1</div>
-        <div class="col-xs-1 col-xs-pull-4 columna">last</div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 columna">1 de 1</div>
-        <div class="col-xs-1 col-xs-offset-4 columna">1 de 1</div>
-        <div class="col-xs-1 columna">1 de 1</div>
-        <div class="col-xs-1 columna">1 de 1</div>
-        <div class="col-xs-1 columna">last</div>
-      </div>
-      <div class="row">
-        <div class="col-xs-1 columna">1 de 2</div>
-        <div class="col-xs-1 col-xs-offset-10 columna">2 de 2</div>
-      </div>
-    </div>
+    <div class="row">
+          	<div class="col-xs-11 col-sm-10 columna col-md-offset-1 subcolumna"><img src="imagen.jpg" class="img-resposive" height="150px" width="150px"></div>
+</div>
+<div class="row">
+            <div class="col-xs-12 col-md-5 col-md-offset-1 columna subcolumna"><img src="imagen2.jpg"height="150px"class="img-resposive img-circle" width="150px"></div>
+            <div class="col-xs-12 col-md-5 columna subcolumna">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit</div>
+</div>
+<div class="row">
+            <div class="col-xs-11 col-sm-10 col-md-offset-1 columna subcolumna" class="img-resposive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit. Integer lacinia dapibus efficitur. Donec non volutpat metus, vitae finibus elit. Vestibulum pellentesque magna vitae leo condimentum imperdiet. Ut semper commodo semper. Suspendisse eu molestie dolor. Praesent tempus consequat ligula, quis elementum mi sodales non. Integer ullamcorper vestibulum fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Nam ultrices vitae ante luctus sollicitudin.</div>
+</div>
+
+<div class="row">
+        <div class="col-xs-10 columna col-xs-offset-1 text-center">
+        	<div class="row">
+            	<div class="col-xs-4 col-md-4"><img src="imagen3.jpg"height="150px" class="img-resposive" width="150px"></div>
+            	<div class="col-xs-4 col-md-4 "><img src="imagen4.jpg"height="150px" class="img-resposive" width="150px"></div>
+            	<div class="col-xs-4 col-md-4 "><img src="imagen5.jpg" class="img-resposive" height="150px" width="150px"></div>
+            </div>
+
+ </div>
+ </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
