--- a/03_grid_introduccion/index.html
+++ b/03_grid_introduccion/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Introducción al sistema de rejilla</title>
+    <title>GRID Boostrap</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,30 +18,41 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Introducción al sistema de rejilla</h1>
-
-    <div class="container">
+  	<h1></h1>
+<div class="container text-center" >
     <div class="row">
-          	<div class="col-xs-11 col-sm-10 columna col-md-offset-1 subcolumna"><img src="imagen.jpg" class="img-resposive" height="150px" width="150px"></div>
-</div>
-<div class="row">
-            <div class="col-xs-12 col-md-5 col-md-offset-1 columna subcolumna"><img src="imagen2.jpg"height="150px"class="img-resposive img-circle" width="150px"></div>
-            <div class="col-xs-12 col-md-5 columna subcolumna">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit</div>
-</div>
-<div class="row">
-            <div class="col-xs-11 col-sm-10 col-md-offset-1 columna subcolumna" class="img-resposive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit. Integer lacinia dapibus efficitur. Donec non volutpat metus, vitae finibus elit. Vestibulum pellentesque magna vitae leo condimentum imperdiet. Ut semper commodo semper. Suspendisse eu molestie dolor. Praesent tempus consequat ligula, quis elementum mi sodales non. Integer ullamcorper vestibulum fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Nam ultrices vitae ante luctus sollicitudin.</div>
-</div>
+          	<div class="hidden-xs hidden-sm col-md-10 col-lg-10 columna col-md-offset-1  subcolumna"><img src="imagen.jpg" class="img-resposive" height="150px" width="150px">
+          	</div>
+			<div class="col-xs-10 visible-xs col-sm-10 visible-sm col-xs-offset-1 columna subcolumna"><img src="imagen2.jpg"height="160px"class="img-resposive img-circle" width="150px">
+			</div>
+	</div>	
+	<div class="row">
+            <div class="hidden-xs hidden-sm col-md-5 col-lg-5 col-md-offset-1 columna subcolumna"><img src="imagen2.jpg"height="160px"class="img-resposive img-circle" width="150px"></div>
+            <div class="hidden-xs hidden-sm col-md-5 col-lg-5 columna subcolumna">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blanditLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit. Integer lacinia dapibus efficitur.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsu
+          	</div>
+			<div class="col-xs-10 visible-xs col-sm-10 visible-sm col-xs-offset-1 columna subcolumna" class="img-resposive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit. Integer lacinia dapibus efficitur. Donec non volutpat metus, vitae finibus elit. Vestibulum pellentesque magna vitae leo condimentum imperdiet. Ut semper commodo semper. Suspendisse eu molestie dolor. Praesent tempus consequat ligula, quis elementum mi sodales non. Integer ullamcorper vestibulum fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Nam ultrices vitae ante luctus sollicitudin.</div>
+		</div>
+	<div class="row">
+            <div class="hidden-xs hidden-sm col-md-10 col-lg-10 col-md-offset-1 col-xs-offset-1 columna subcolumna" class="img-resposive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ultrices elit id felis condimentum, vitae hendrerit tortor congue. Cras cursus dictum ante eu blandit. Integer lacinia dapibus efficitur. Donec non volutpat metus, vitae finibus elit. Vestibulum pellentesque magna vitae leo condimentum imperdiet. Ut semper commodo semper. Suspendisse eu molestie dolor. Praesent tempus consequat ligula, quis elementum mi sodales non. Integer ullamcorper vestibulum fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Nam ultrices vitae ante luctus sollicitudin.</div>
+            <div class="col-xs-5 visible-xs col-sm-5 visible-sm col-xs-offset-1 columna subcolumna"><img src="imagen2.jpg"height="160px"class="img-resposive" width="150px">
+			</div>
+			<div class="col-xs-5 visible-xs col-sm-5 visible-sm columna subcolumna"><img src="imagen3.jpg"height="160px"class="img-resposive" width="150px">
+			</div>
+	</div>
 
-<div class="row">
-        <div class="col-xs-10 columna col-xs-offset-1 text-center">
+	<div class="row">
+        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 columna col-md-offset-1 col-xs-offset-1">
         	<div class="row">
-            	<div class="col-xs-4 col-md-4"><img src="imagen3.jpg"height="150px" class="img-resposive" width="150px"></div>
-            	<div class="col-xs-4 col-md-4 "><img src="imagen4.jpg"height="150px" class="img-resposive" width="150px"></div>
-            	<div class="col-xs-4 col-md-4 "><img src="imagen5.jpg" class="img-resposive" height="150px" width="150px"></div>
-            </div>
+            	<div class="hidden-xs hidden-sm col-md-4 col-lg-4"><img src="imagen3.jpg"height="150px" class="img-resposive" width="150px"></div>
+            	<div class="hidden-xs hidden-sm col-md-4 col-lg-4"><img src="imagen4.jpg"height="150px" class="img-resposive" width="150px"></div>
+            	<div class="hidden-xs hidden-sm col-md-4 col-lg-4 "><img src="imagen5.jpg" class="img-resposive" height="150px" width="150px"></div>
+        <div class="col-xs-12 visible-xs col-sm-12 visible-sm columna subcolumna"><img src="imagen.jpg"height="160px"class="img-resposive" width="150px">
+		</div>
 
  </div>
  </div>
+</div>
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
